# redmine_mcp_server

./: .clineignore  .clinerules  .env.sample  .gitignore  README.md  TODO.md  TODO_main.py.md  main.py  openapi.yml  pyproject.toml  redmine_api.md  redmine_spec.txt  unwrap_text_content.py
.github/: pull_request_template.md
docs/: Attachments_design.md  CustomFields_design.md  Files_design.md  Files_implementation_plan.md  Groups.html  Groups_api_spec.md  Groups_design.md  Groups_implementation_plan.md  Groups_implementation_spec.md  IssueCategories.html  IssueCategories_design.md  IssueRelations_api_spec.md  IssueRelations_implementation_spec.md  IssueStatuses_api_spec.md  IssueStatuses_design.md  Issues_design.md  MCP_INTERFACE.md  MyAccount_api_spec.md  MyAccount_design.md  News_design.md  ProjectMemberships_api_reference.md  ProjectMemberships_design.md  Projects_design.md  Roles_design.md  Search_design.md  TimeEntries_api_reference.md  TimeEntries_design.md  Trackers.html  Trackers_design.md  Users_design.md  design.md  enumerations_design.md  enumerations_implementation_spec.md  issues.html  myaccount.html  project_memberships.mhtml  projects.html  pull_request.md  test_design.md  time_entries.html  (+1 more)
test/: test_create_issue_tool.py  test_delete_issue_tool.py  test_get_memberships_tool.py
tests/: conftest.py  random_identifier.py  test_add_remove_watcher_tool.py  test_archive_unarchive_project_tool.py  test_create_project_tool.py  test_get_issues_tool.py  test_get_memberships_tool.py  test_get_project_tool.py  test_get_projects_tool.py  test_main_get_issue.py  (+19 more)
(+233 files in other folders)
